# thermagate

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/apt/sources.list.d/: docker.sources  nodesource.sources
.github/workflows/: build.yml  docker-image.yml  release.yml  test.yml
codegen/: Cargo.toml  Makefile  README.md
codegen/src/: csv.rs  gen_enums.rs  gen_params.rs  main.rs  model.rs
cross/armv7-unknown-linux-musleabihf/: Dockerfile
data/: devices.toml  enums.csv  pages.json  parameters.de.toml  parameters.en.toml  parameters.toml  params.csv
docs/: CAN-Bus_Protocol.md  ROTEX_RoCon_G1_Gateway.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/fonts/: roboto.css
frontend/src/: App.tsx  Statistics.tsx  config.ts  schema.ts
frontend/src/components/: DeviceFilter.tsx  ParameterFilter.tsx  ValueDisplay.tsx
frontend/src/contexts/: catalog.tsx  socket.tsx  state.tsx
frontend/src/routes/: CanMonitor.tsx  Pages.tsx  Params.tsx
src/: can.rs  config.default.toml  config.rs  data.rs  gateway.rs  hass.rs  lib.rs  main.rs  model.rs  old_can.rs  old_model.rs  rotex.rs  serial.rs  utils.rs  web.rs
src/can/: device.rs  driver.rs  enum.rs  enums.rs  message.rs  mod.rs  param.rs  params.rs
src/can2/: device.rs  message.rs  mod.rs
src/catalog/: enums_csv.rs  error.rs  mod.rs  pages.rs  param.rs  params_csv.rs  strings.rs
src/commands/: can_can.rs  can_monitor.rs  convert_data.rs  default_config.rs  gateway.rs  mod.rs  mqtt_test.rs  serial_monitor.rs  serial_query.rs  set_param.rs
src/config/: default.toml  mod.rs
src/model/: enum.rs  mod.rs  string.rs  time.rs  time_range.rs  unit.rs  value.rs
