[package]
name = "altherma-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Gateway compatible with ROTEX based DAIKIN Altherma 3 heat pump"
keywords = ["daikin", "altherma", "gateway", "heat pump"]
license = "GPL-3.0"
repository = "https://github.com/bikeshedder/altherma-gateway"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws", "tracing"] }
clap = { version = "4.3.4", features = ["derive"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
console = "0.15.7"
futures-util = "0.3.28"
indexmap = { version = "2.0.0", features = ["serde"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
maud = { git = "https://github.com/vidhanio/maud", branch = "patch-1", features = [
    "axum",
] }
nrg-hass = { git = "https://github.com/bikeshedder/nrg" }
nrg-mqtt = { git = "https://github.com/bikeshedder/nrg" }
num-traits = "0.2.17"
num_enum = "0.7.1"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.9.1"
rumqttc = "0.23.0"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
serde = { version = "1.0.164", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.96"
serde_yaml = "0.9.22"
serialport = { version = "4", features = ["serde"] }
socketcan = { version = "3.3.0", features = ["tokio"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "sync",
] }
tokio-serial = "5.4.4"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"

[profile.release]
strip = true

[workspace]
members = ["codegen"]
