[package]
name = "thermagate"
version = "0.1.0"
edition = "2021"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Gateway compatible with ROTEX based DAIKIN Altherma 3 heat pump"
keywords = ["daikin", "altherma", "gateway", "heat pump"]
license = "GPL-3.0"
repository = "https://github.com/bikeshedder/thermagate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws", "tracing"] }
clap = { version = "4.3.4", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
console = "0.15.7"
futures-util = "0.3.28"
itertools = "0.13.0"
maud = { version = "0.26.0", features = ["axum"] }
nrg-hass = { git = "https://github.com/bikeshedder/nrg" }
nrg-mqtt = { git = "https://github.com/bikeshedder/nrg" }
num-traits = "0.2.17"
num_enum = "0.7.1"
phf = { version = "0.11.2", features = ["macros"] }
rumqttc = "0.24.0"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
socketcan = { version = "3.3.0", features = ["tokio"] }
strum = { version = "0.26.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "sync",
] }
toml = "0.8"
tower-http = { version = "0.6.0", features = ["fs", "cors"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"

[profile.release]
strip = true

[workspace]
members = ["codegen"]
