[package]
name = "thermagate-codegen"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
heck = "0.5.0"
itertools = "0.13.0"
num-traits = "0.2.17"
prettyplease = "0.2.20"
proc-macro2 = "1.0.70"
quote = "1.0.33"
regex = "1.10.2"
rust_decimal = "1.33.1"
serde = { version = "1.0.193", features = ["derive"] }
syn = "2.0.41"
time = { version = "0.3.23", features = [
    "serde",
    "parsing",
    "macros",
    "serde-human-readable",
] }
